링크 수정 LAFUMA LIFE

--- a/sub_about/sub_about.html
+++ b/sub_about/sub_about.html
@@ -590,7 +590,7 @@
                 </ul>
               </li>
               <li>
-                <a href="#" title="LAFUMA LIFE"> LAFUMA LIFE </a>
+                <a href="lafuma_life.html" title="LAFUMA LIFE"> LAFUMA LIFE </a>
               </li>
               <li>
                 <a href="#" title="LOOKBOOK"> LOOKBOOK </a>
