--- a/sub_join.html
+++ b/sub_join.html
@@ -1249,7 +1249,7 @@
                 </ul>
               </li>
               <li>
-                <a href="#" title="LAFUMA LIFE"> LAFUMA LIFE </a>
+                <a href="lafuma_life.html" title="LAFUMA LIFE"> LAFUMA LIFE </a>
               </li>
               <li class="lookbook">
                 <a href="#" title="LOOKBOOK"> LOOKBOOK </a>
