링크변경 PRODUCT MEN

--- a/sub_about.html
+++ b/sub_about.html
@@ -642,7 +642,7 @@
                 </ul>
               </li>
               <li class="product">
-                <a href="#none" title="PRODUCT"> PRODUCT </a>
+                <a href="product_man.html" title="PRODUCT"> PRODUCT </a>
                 <ul>
                   <li><a href="product_man.html" title="MEN">MEN</a></li>
                   <li><a href="#none" title="WOMEN">WOMEN</a></li>
